# seedboxsync-front

./: .dockerignore  .editorconfig  .flitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  package-lock.json  package.json  pyproject.toml  sonar-project.properties  vite.config.js
.github/: dependabot.yml
.github/workflows/: codeql.yml  devops.yml
seedboxsync-front/: __init__.py  homepage.py
seedboxsync-front/templates/: base.html  homepage.html
seedboxsync-front/templates/components/: navbar.html
seedboxsync_front/: __init__.py  __version__.py  api.py  app.py  babel.py  cache.py  config.py  db.py  homepage.py  page_not_found.py  utils.py
seedboxsync_front/apis/: __init__.py  downloads.py  error.py  locks.py  resources.py  uploads.py
seedboxsync_front/controlers/: api.py  downloaded.py  error.py  frontend.py  homepage.py  stats.py
seedboxsync_front/controlers/api/: downloaded.py  error.py  stats_by_month.py  stats_by_year.py  uploaded.py
seedboxsync_front/static/src/: main.js  style.css
seedboxsync_front/templates/: base.html  downloaded.html  error.html  homepage.html  info.html  settings.html  stats.html  uploaded.html
seedboxsync_front/templates/components/: footer.html  javascripts.html  messages.html  modal.html  navbar.html
seedboxsync_front/views/: __init__.py  downloaded.py  error.py  healthcheck.py  homepage.py  info.py  settings.py  stats.py  uploaded.py
tests/: conftest.py  test_api.py  test_apis.py  test_apis_downloads.py  test_apis_locks.py  test_apis_uploads.py  test_factory.py  test_front.py
tests/resources/: seedboxsync.yml
(+24 files in other folders)
